--- a/WebContent/resources/components/gameRow.xhtml
+++ b/WebContent/resources/components/gameRow.xhtml
@@ -56,9 +56,10 @@
 			  					<span id="#{cc.attrs.homeBadgeId}" class="selected-badge home #{cc.attrs.homeSelected}">
 			  						<img src="#{cc.attrs.homePickImage}" />
 			  					</span>
-			  					<a class="helmet-link" href="#{cc.attrs.homeTeamUrl}">
+			  					<h:link class="helmet-link" outcome="teamPage">
+			  						<f:param name="teamAbbr" value="#{cc.attrs.homeTeamUrl}" />
 			  						<figure><img id="#{cc.attrs.homeHelmetId}" class="helmet #{cc.attrs.selectable}" src="#{cc.attrs.homeHelmet}" /></figure>
-			  					</a>
+			  					</h:link>
 			  					<h6>Home Team:</h6>
 			  				</div>
 			  			</div>
@@ -107,9 +108,10 @@
 								<span id="#{cc.attrs.awayBadgeId}" class="selected-badge away #{cc.attrs.awaySelected}" >
 									<img src="#{cc.attrs.awayPickImage}" />
 								</span>
-								<a class="helmet-link" href="#{cc.attrs.awayTeamUrl}">
+								<h:link class="helmet-link" outcome="teamPage">
+									<f:param name="teamAbbr" value="#{cc.attrs.awayTeamUrl}" />
 									<figure><img id="#{cc.attrs.awayHelmetId}" class="helmet #{cc.attrs.selectable}" src="#{cc.attrs.awayHelmet}" /></figure>
-								</a>
+								</h:link>
 								<h6>Away Team:</h6>
 							</div>
 						</div>
