Home updates & work integration -leaderboard working - 11-7-16

--- a/WebContent/resources/components/gameRow.xhtml
+++ b/WebContent/resources/components/gameRow.xhtml
@@ -44,7 +44,7 @@
 	<composite:implementation>
 		<!-- Game container -->
 		  <div class="row game-container">
-			  <div class="medium-12 columns">
+			  <div class="small-12 columns">
 
 			  	<!-- Game info row - uses attribute as ID for event handling -->
 			  	<div id="#{cc.attrs.rowId}" class="row game-info">
