--- a/WebContent/resources/css/leaderboard.css
+++ b/WebContent/resources/css/leaderboard.css
@@ -2,6 +2,9 @@
 	background-color: #CCFFC7;
 }
 
+.leaderboard-padding {
+	margin-bottom: 0;
+}
 
 ul.leaderboard-list {
   list-style-type: none;
@@ -67,6 +70,11 @@ ul.leaderboard-list li a {
 .avatar-col {
 	position-relative;
 	display: inline-block;
+}
+.leader-avatar {
+	width: 6.5rem;
+	height: 5rem;
+	border: 2px solid #fefefe;
 }
 .position-badge {
 	position:absolute;
