chart fixes, summary page - need export, check points....

--- a/WebContent/resources/css/app.css
+++ b/WebContent/resources/css/app.css
@@ -41,7 +41,8 @@
 	font-style:normal;
 	text-shadow: 2px 2px #260000;
 	/*color:#f6f6bb;*/
-	color:#cefddd;
+	/*color:#cefddd;*/
+	color:#c2f8fc;
 	text-rendering:optimizeLegibility;
 	margin-top:0;
 	margin-bottom:0.5rem;
