--- a/WebContent/resources/css/profile.css
+++ b/WebContent/resources/css/profile.css
@@ -20,17 +20,17 @@
 .avatar-col {
 	position:relative;
 }
-.avatar-history-badge {
+span.avatar-history-badge {
 	position:absolute;
-	left: 7px;
-	top: -18px;
-	width:50%;height:50%;
+	left: -13px;
+	top: -10px;
+	width: 100%;
+	height: 70%;
 	text-align:center;
-	line-height:3em;
 	z-index: 3;
-	background: rgba(255,255,255,0.75);
+	background: rgba(255,255,255,0.45) none repeat scroll 0 0;
 	border-radius: 50%;
-	border: 1px solid rgb(150, 150, 150);
+	border: 1px solid rgb(185, 185, 185);
 }
 .commish-title {
 	font-size: 1rem;
