--- a/WebContent/resources/css/gamerow.css
+++ b/WebContent/resources/css/gamerow.css
@@ -62,6 +62,11 @@
 	margin: auto;
 }
 
+.grayed {
+	-webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(100%);
+}
+
 .kickoff-time {
 	display: inline-block;
 	margin-top: 1.5rem;
