--- a/WebContent/resources/css/header-subnav.css
+++ b/WebContent/resources/css/header-subnav.css
@@ -26,13 +26,27 @@
       padding: 0.9rem 1rem;
       font-size: 0.75rem;
       color: #ffe;
+      background: rgba(250, 250, 250, 0.15);
       text-transform: uppercase;
       display: block;
       font-weight: bold;
       letter-spacing: 1px;
       transition: all 0.35s ease-in-out; }
-      .header-subnav li a.is-active {
-        background: rgba(250, 250, 250, 0.15); }
       .header-subnav li a:hover {
-        background: rgba(250, 250, 250, 0.15);
+        background: rgba(250, 250, 250, 0.35);
         transition: all 0.35s ease-in-out; }
+        
+    .header-subnav li span {
+      padding: 0.9rem 1rem;
+      font-size: 0.75rem;
+      color: #c0c0c0;
+      background: rgba(218, 218, 218, 0.15);
+      text-transform: uppercase;
+      display: block;
+      font-weight: bold;
+      letter-spacing: 1px;
+      transition: all 0.35s ease-in-out; }
+      
+.loginPrompt {
+	color: #3f3f3f;
+}
