--- a/WebContent/resources/components/picksRow.xhtml
+++ b/WebContent/resources/components/picksRow.xhtml
@@ -12,22 +12,24 @@
 		<composite:attribute name="season" required="true" />
 		<composite:attribute name="rowId" required="true" />
 		<composite:attribute name="homeCity" default="Home Team" />
+		<composite:attribute name="homeAbbr" required="true" />
 		<composite:attribute name="homeRecord" default="(0-0)" />
 		<composite:attribute name="homeScore" default="00" />
 		<composite:attribute name="homeHelmet" default="img/homeHelmet.png" />
 		<composite:attribute name="homeHelmetId" />
 		<composite:attribute name="homeBadgeId"  />
 		<composite:attribute name="homeSelected" default="" />
-		<composite:attribute name="homePickImage" default="img/arrows/blank.png" />
+		<composite:attribute name="homePickImage" required="true" />
 		<composite:attribute name="homeTeamUrl" default="#" />
 		<composite:attribute name="awayCity" default="Away Team" />
+		<composite:attribute name="awayAbbr" required="true" />
 		<composite:attribute name="awayRecord" default="(0-0)"  />
 		<composite:attribute name="awayScore" default="00" />
 		<composite:attribute name="awayHelmet" default="img/awayHelmet.png" />
 		<composite:attribute name="awayHelmetId" />
 		<composite:attribute name="awayBadgeId" />
 		<composite:attribute name="awaySelected" default="" />
-		<composite:attribute name="awayPickImage" default="img/arrows/blank.png" />'
+		<composite:attribute name="awayPickImage" required="true" />'
 		<composite:attribute name="awayTeamUrl" default="#" />
 		<composite:attribute name="spread" default="0.0" />
 		<composite:attribute name="gameTime" default="kickoff" />
@@ -42,92 +44,90 @@
 	</composite:interface>
 	
 	<composite:implementation>
-		<h:form id="gameForm_#{cc.attrs.rowId}">
-			<!-- Game container -->
-			  <div class="row game-container">
-				  <div class="small-12 columns">
-	
-				  	<!-- Game info row - uses attribute as ID for event handling -->
-				  	<div class="row game-info">
-	
-				  		<!-- Home Column -->
-				  		<div class="medium-4 columns">
-				  			<div class="row">
-				  				<div class="medium-12 columns">
-				  					<h5 class="home-team-name">#{cc.attrs.homeCity} <small class="record">#{cc.attrs.homeRecord}</small></h5>
-				  				</div>
-				  			</div>
-				  			<div class="row">
-				  				<div class="medium-12 columns home-helmet">
-				  					<span id="#{cc.attrs.homeBadgeId}" class="selected-badge home #{cc.attrs.homeSelected}">
-				  						<img src="#{cc.attrs.homePickImage}" class="#{cc.attrs.homeGrayed}" />
-				  					</span>
-				  					<p:commandLink id="homeLink_#{cc.attrs.rowId}" actionListener="#{makePicksBean.selectTeam}" update="@form" >
-				  						<f:attribute name="selectedTeam" value="#{cc.attrs.homeCity}" />
-				  						<figure><img id="#{cc.attrs.homeHelmetId}" class="helmet #{cc.attrs.homeSelectable} #{cc.attrs.homeGrayed} #{cc.attrs.singlePick}" src="#{cc.attrs.homeHelmet}" /></figure>
-				  					</p:commandLink>
-				  					<h6>Home Team:</h6>
-				  				</div>
-				  			</div>
-				  		</div>
-	
-				  		<!-- Score Column -->
-				  		<div class="medium-4 columns">
-				  			<div class="row">
-				  				<div class="medium-12 columns">
-				  					<h6 class="kickoff-time">#{cc.attrs.gameTime}</h6>
-				  				</div>
-				  			</div>
-				  			<div class="row">
-				  				<div class="medium-4 columns score-col home-score-col">
-				  					<h4 class="home-score">#{cc.attrs.homeScore}</h4>
-				  				</div>
-				  				<div class="medium-1 columns score-col arrow-col">
-				  					<img src="#{cc.attrs.homeArrow}" />
-				  				</div>
-				  				<div class="medium-2 columns score-col spread-area-col">
-				  					<h5 class="spread-area">#{cc.attrs.spread}</h5>
-				  				</div>
-				  				<div class="medium-1 columns score-col arrow-col">
-				  					<img src="#{cc.attrs.awayArrow}" />
-				  				</div>
-				  				<div class="medium-4 columns score-col away-score-col">
-				  					<h4 class="away-score">#{cc.attrs.awayScore}</h4>
-				  				</div>
-				  			</div>
-				  			<div class="row">
-				  				<div class="medium-12 columns">
-				  					<h5 class="time-remaining">#{cc.attrs.timeRemaining}</h5>
-				  				</div>
-				  			</div>
-				  		</div>
-	
-				  		<!-- Away Column -->
-				  		<div class="medium-4 columns">
-							<div class="row">
-								<div class="medium-12 columns">
-									<h5 class="away-team-name">#{cc.attrs.awayCity} <small class="record">#{cc.attrs.awayRecord}</small></h5>
-								</div>
+		<!-- Game container -->
+		  <div class="row game-container">
+			  <div class="small-12 columns">
+
+			  	<!-- Game info row - uses attribute as ID for event handling -->
+			  	<div class="row game-info">
+
+			  		<!-- Home Column -->
+			  		<div class="medium-4 columns">
+			  			<div class="row">
+			  				<div class="medium-12 columns">
+			  					<h5 class="home-team-name">#{cc.attrs.homeCity} <small class="record">#{cc.attrs.homeRecord}</small></h5>
+			  				</div>
+			  			</div>
+			  			<div class="row">
+			  				<div class="medium-12 columns home-helmet">
+			  					<p:outputPanel styleClass="selected-badge home #{cc.attrs.homeSelected}">
+			  						<h:graphicImage value="img/check-smaller.png" class="#{cc.attrs.homeGrayed}" />
+			  					</p:outputPanel>
+			  					<p:commandLink action="#{makePicksBean.selectTeam(cc.attrs.homeAbbr)}" update="@form" >
+			  						<f:attribute name="selectedTeam" value="#{cc.attrs.homeCity}" />
+			  						<figure><img class="helmet #{cc.attrs.homeSelectable} #{cc.attrs.homeGrayed} #{cc.attrs.singlePick}" src="#{cc.attrs.homeHelmet}" /></figure>
+			  					</p:commandLink>
+			  					<h6>Home Team:</h6>
+			  				</div>
+			  			</div>
+			  		</div>
+
+			  		<!-- Score Column -->
+			  		<div class="medium-4 columns">
+			  			<div class="row">
+			  				<div class="medium-12 columns">
+			  					<h6 class="kickoff-time">#{cc.attrs.gameTime}</h6>
+			  				</div>
+			  			</div>
+			  			<div class="row">
+			  				<div class="medium-4 columns score-col home-score-col">
+			  					<h4 class="home-score">#{cc.attrs.homeScore}</h4>
+			  				</div>
+			  				<div class="medium-1 columns score-col arrow-col">
+			  					<img src="#{cc.attrs.homeArrow}" />
+			  				</div>
+			  				<div class="medium-2 columns score-col spread-area-col">
+			  					<h5 class="spread-area">#{cc.attrs.spread}</h5>
+			  				</div>
+			  				<div class="medium-1 columns score-col arrow-col">
+			  					<img src="#{cc.attrs.awayArrow}" />
+			  				</div>
+			  				<div class="medium-4 columns score-col away-score-col">
+			  					<h4 class="away-score">#{cc.attrs.awayScore}</h4>
+			  				</div>
+			  			</div>
+			  			<div class="row">
+			  				<div class="medium-12 columns">
+			  					<h5 class="time-remaining">#{cc.attrs.timeRemaining}</h5>
+			  				</div>
+			  			</div>
+			  		</div>
+
+			  		<!-- Away Column -->
+			  		<div class="medium-4 columns">
+						<div class="row">
+							<div class="medium-12 columns">
+								<h5 class="away-team-name">#{cc.attrs.awayCity} <small class="record">#{cc.attrs.awayRecord}</small></h5>
 							</div>
-							<div class="row">
-								<div class="medium-12 columns away-helmet">
-									<span id="#{cc.attrs.awayBadgeId}" class="selected-badge away #{cc.attrs.awaySelected}" >
-										<img src="#{cc.attrs.awayPickImage}" class="#{cc.attrs.awayGrayed}" />
-									</span>
-									<p:commandLink id="awayLink_#{cc.attrs.rowId}" actionListener="#{makePicksBean.selectTeam}" update="@form" >
-										<f:attribute name="selectedTeam" value="#{cc.attrs.awayCity}" />
-										<figure><img id="#{cc.attrs.awayHelmetId}" class="helmet #{cc.attrs.awaySelectable} #{cc.attrs.awayGrayed} #{cc.attrs.singlePick}" src="#{cc.attrs.awayHelmet}" /></figure>
-									</p:commandLink>
-									<h6>Away Team:</h6>
-								</div>
+						</div>
+						<div class="row">
+							<div class="medium-12 columns away-helmet">
+								<p:outputPanel styleClass="selected-badge away #{cc.attrs.awaySelected}" >
+									<h:graphicImage value="img/check-smaller.png" class="#{cc.attrs.awayGrayed}" />
+								</p:outputPanel>
+								<p:commandLink action="#{makePicksBean.selectTeam(cc.attrs.awayAbbr)}" update="@form">
+									<f:attribute name="selectedTeam" value="#{cc.attrs.awayCity}" />
+									<figure><img class="helmet #{cc.attrs.awaySelectable} #{cc.attrs.awayGrayed} #{cc.attrs.singlePick}" src="#{cc.attrs.awayHelmet}" /></figure>
+								</p:commandLink>
+								<h6>Away Team:</h6>
 							</div>
-				  		</div>
-				  	</div>
-	
-				  </div>
-	          </div>
-			  <!-- End Game Container -->
-		  </h:form>
+						</div>
+			  		</div>
+			  	</div>
+
+			  </div>
+          </div>
+		  <!-- End Game Container -->
 	</composite:implementation>
 
 </html>
