--- a/WebContent/resources/css/profile.css
+++ b/WebContent/resources/css/profile.css
@@ -19,13 +19,13 @@
 }
 .avatar-col {
 	position:relative;
+	width: 125px;
 }
 span.avatar-history-badge {
 	position:absolute;
 	left: -13px;
 	top: -10px;
-	width: 80%;
-	height: 60%;
+	width: 70%;
 	text-align:center;
 	z-index: 3;
 	background: rgba(255,255,255,0.45) none repeat scroll 0 0;
