--- a/WebContent/resources/css/app.css
+++ b/WebContent/resources/css/app.css
@@ -131,3 +131,7 @@ tbody tr:nth-child(2n) {
 h1 small, h2 small, h3 small, h4 small, h5 small, h6 small {
 	color: #777777;
 }
+
+.widget-text {
+	color: #333333;
+}
