--- a/WebContent/resources/css/app.css
+++ b/WebContent/resources/css/app.css
@@ -135,3 +135,12 @@ h1 small, h2 small, h3 small, h4 small, h5 small, h6 small {
 .widget-text {
 	color: #333333;
 }
+
+.faq-text {
+	margin: auto;
+}
+
+.faq-headline {
+	font-family: Verdana,Arial,sans-serif;
+	font-size: 2em;
+}
