lots of fixes, added FAQ & About pages, fixed trending 12-11-16

--- a/WebContent/resources/components/gameContainer.xhtml
+++ b/WebContent/resources/components/gameContainer.xhtml
@@ -27,6 +27,7 @@
           	<gc:gameRow   rowId="#{gameBean.rowId}"
           				  season="#{gameBean.seasonNumber}"
           				  homeCity="#{gameBean.homeCity}" 
+          				  homeAbbr="#{gameBean.homeAbbr}" 
           				  homeRecord="#{gameBean.homeRecord}"
           				  homeScore="#{gameBean.homeScore}" 
           				  homeHelmet="#{gameBean.homeHelmet}"
@@ -36,6 +37,7 @@
           				  homePickImage="#{gameBean.homePickImage}"
           				  homeTeamUrl="#{gameBean.homeTeamUrl}"
           				  awayCity="#{gameBean.awayCity}"
+          				  awayAbbr="#{gameBean.awayAbbr}" 
           				  awayRecord="#{gameBean.awayRecord}"
           				  awayScore="#{gameBean.awayScore}"
           				  awayHelmet="#{gameBean.awayHelmet}"
