--- a/WebContent/resources/components/gameRow.xhtml
+++ b/WebContent/resources/components/gameRow.xhtml
@@ -12,6 +12,7 @@
 		<composite:attribute name="season" required="true" />
 		<composite:attribute name="rowId" required="true" />
 		<composite:attribute name="homeCity" default="Home Team" />
+		<composite:attribute name="homeAbbr" required="true" />
 		<composite:attribute name="homeRecord" default="(0-0)" />
 		<composite:attribute name="homeScore" default="00" />
 		<composite:attribute name="homeHelmet" default="img/homeHelmet.png" />
@@ -21,6 +22,7 @@
 		<composite:attribute name="homePickImage" default="img/arrows/blank.png" />
 		<composite:attribute name="homeTeamUrl" default="#" />
 		<composite:attribute name="awayCity" default="Away Team" />
+		<composite:attribute name="awayAbbr" required="true" />
 		<composite:attribute name="awayRecord" default="(0-0)"  />
 		<composite:attribute name="awayScore" default="00" />
 		<composite:attribute name="awayHelmet" default="img/awayHelmet.png" />
@@ -42,7 +44,7 @@
 	</composite:interface>
 	
 	<composite:implementation>
-		<!-- Game container -->
+		<!-- Game container - large & medium screens -->
 		  <div class="row game-container">
 			  <div class="small-12 columns">
 
@@ -50,14 +52,15 @@
 			  	<div class="row game-info">
 
 			  		<!-- Home Column -->
-			  		<div class="medium-4 columns">
+			  		<div class="small-4 columns">
 			  			<div class="row">
-			  				<div class="medium-12 columns">
-			  					<h5 class="home-team-name">#{cc.attrs.homeCity} <small class="record">#{cc.attrs.homeRecord}</small></h5>
+			  				<div class="small-12 columns">
+			  					<h5 class="home-team-name hide-for-small-only">#{cc.attrs.homeCity} <small class="record">#{cc.attrs.homeRecord}</small></h5>
+			  					<h5 class="home-team-name show-for-small-only">#{cc.attrs.homeAbbr} <small class="record">#{cc.attrs.homeRecord}</small></h5>
 			  				</div>
 			  			</div>
 			  			<div class="row">
-			  				<div class="medium-12 columns home-helmet">
+			  				<div class="small-12 columns home-helmet">
 			  					<span id="#{cc.attrs.homeBadgeId}" class="selected-badge home #{cc.attrs.homeSelected}">
 			  						<img src="#{cc.attrs.homePickImage}" class="#{cc.attrs.homeGrayed}" />
 			  					</span>
@@ -66,51 +69,58 @@
 			  						<f:param name="nec" value="#{cc.attrs.season}" />
 			  						<figure><img id="#{cc.attrs.homeHelmetId}" class="helmet #{cc.attrs.homeSelectable} #{cc.attrs.homeGrayed} #{cc.attrs.singlePick}" src="#{cc.attrs.homeHelmet}" /></figure>
 			  					</h:link>
-			  					<h6>Home Team:</h6>
+			  					<h6 class="hide-for-small-only">Home Team:</h6>
+			  					<h6 class="show-for-small-only">Home:</h6>
 			  				</div>
 			  			</div>
 			  		</div>
 
 			  		<!-- Score Column -->
-			  		<div class="medium-4 columns">
+			  		<div class="small-4 columns">
 			  			<div class="row">
-			  				<div class="medium-12 columns">
-			  					<h6 class="kickoff-time">#{cc.attrs.gameTime}</h6>
+			  				<div class="small-12 columns">
+			  					<h6 class="kickoff-time hide-for-small-only">#{cc.attrs.gameTime}</h6>
+			  					<h:outputText value="#{cc.attrs.gameTime}" class="kickoff-time show-for-small-only" />
 			  				</div>
 			  			</div>
 			  			<div class="row">
-			  				<div class="medium-4 columns score-col home-score-col">
-			  					<h4 class="home-score">#{cc.attrs.homeScore}</h4>
+			  				<div class="small-4 columns score-col home-score-col">
+			  					<h4 class="home-score hide-for-small-only">#{cc.attrs.homeScore}</h4>
+			  					<h:outputText value="#{cc.attrs.homeScore}" class="home-score show-for-small-only" />
 			  				</div>
-			  				<div class="medium-1 columns score-col arrow-col">
+			  				<div class="small-1 columns score-col arrow-col">
 			  					<img src="#{cc.attrs.homeArrow}" />
 			  				</div>
-			  				<div class="medium-2 columns score-col spread-area-col">
-			  					<h5 class="spread-area">#{cc.attrs.spread}</h5>
+			  				<div class="small-2 columns score-col spread-area-col">
+			  					<h5 class="spread-area hide-for-small-only">#{cc.attrs.spread}</h5>
+			  					<h:outputText value="#{cc.attrs.spread}" class="spread-area show-for-small-only" />
 			  				</div>
-			  				<div class="medium-1 columns score-col arrow-col">
+			  				<div class="small-1 columns score-col arrow-col">
 			  					<img src="#{cc.attrs.awayArrow}" />
 			  				</div>
-			  				<div class="medium-4 columns score-col away-score-col">
-			  					<h4 class="away-score">#{cc.attrs.awayScore}</h4>
+			  				<div class="small-4 columns score-col away-score-col">
+			  					<h4 class="away-score hide-for-small-only">#{cc.attrs.awayScore}</h4>
+			  					<h:outputText value="#{cc.attrs.awayScore}" class="away-score show-for-small-only" />
 			  				</div>
 			  			</div>
 			  			<div class="row">
-			  				<div class="medium-12 columns">
-			  					<h5 class="time-remaining">#{cc.attrs.timeRemaining}</h5>
+			  				<div class="small-12 columns">
+			  					<h5 class="time-remaining hide-for-small-only">#{cc.attrs.timeRemaining}</h5>
+			  					<h:outputText value="#{cc.attrs.timeRemaining}" class="time-remaining show-for-small-only" />
 			  				</div>
 			  			</div>
 			  		</div>
 
 			  		<!-- Away Column -->
-			  		<div class="medium-4 columns">
+			  		<div class="small-4 columns">
 						<div class="row">
-							<div class="medium-12 columns">
-								<h5 class="away-team-name">#{cc.attrs.awayCity} <small class="record">#{cc.attrs.awayRecord}</small></h5>
+							<div class="small-12 columns">
+								<h5 class="away-team-name hide-for-small-only">#{cc.attrs.awayCity} <small class="record">#{cc.attrs.awayRecord}</small></h5>
+								<h5 class="away-team-name show-for-small-only">#{cc.attrs.awayAbbr} <small class="record">#{cc.attrs.awayRecord}</small></h5>
 							</div>
 						</div>
 						<div class="row">
-							<div class="medium-12 columns away-helmet">
+							<div class="small-12 columns away-helmet">
 								<span id="#{cc.attrs.awayBadgeId}" class="selected-badge away #{cc.attrs.awaySelected}" >
 									<img src="#{cc.attrs.awayPickImage}" class="#{cc.attrs.awayGrayed}" />
 								</span>
@@ -119,7 +129,8 @@
 			  						<f:param name="nec" value="#{cc.attrs.season}" />
 			  						<figure><img id="#{cc.attrs.awayHelmetId}" class="helmet #{cc.attrs.awaySelectable} #{cc.attrs.awayGrayed} #{cc.attrs.singlePick}" src="#{cc.attrs.awayHelmet}" /></figure>
 			  					</h:link>
-								<h6>Away Team:</h6>
+								<h6 class="hide-for-small-only">Away Team:</h6>
+								<h6 class="show-for-small-only">Away:</h6>
 							</div>
 						</div>
 			  		</div>
@@ -128,6 +139,41 @@
 			  </div>
           </div>
 		  <!-- End Game Container -->
+		  
+		  <!-- Game Container for small screens -->
+		 <!-- 
+		  <div class="show-for-small-only" >
+		  	<p:panelGrid columns="6" layout="grid" >
+		  		<p:outputPanel layout="block">
+		  			<h:outputText value="#{cc.attrs.homeCity}" />
+		  			<h:link outcome="teamPage" >
+		  				<f:param name="teamAbbr" value="#{cc.attrs.homeTeamUrl}" />
+		  				<f:param name="nec" value="#{cc.attrs.season}" />
+		  				<p:graphicImage class="helmet #{cc.attrs.homeSelectable} #{cc.attrs.homeGrayed} #{cc.attrs.singlePick}" value="#{cc.attrs.homeHelmet}" />
+		  			</h:link>
+		  			<h:outputText value="Home Team:" />
+		  		</p:outputPanel>
+		  		<hr />
+		  		<h:outputText value="vs" />
+		  		<hr />
+		  		<p:outputPanel layout="block">
+		  			<h:outputText value="#{cc.attrs.awayCity}" />
+		  			<h:link outcome="teamPage" >
+		  				<f:param name="teamAbbr" value="#{cc.attrs.awayTeamUrl}" />
+		  				<f:param name="nec" value="#{cc.attrs.season}" />
+		  				<p:graphicImage class="helmet #{cc.attrs.awaySelectable} #{cc.attrs.awayGrayed} #{cc.attrs.singlePick}" value="#{cc.attrs.awayHelmet}" />
+		  			</h:link>
+		  			<h:outputText value="Away Team:" />
+		  		</p:outputPanel>
+		  		<p:outputPanel>
+		  			<h:outputText value="Spread: #{cc.attrs.spread}" />
+		  			<h:outputText value="Kickoff: #{cc.attrs.gameTime}" />
+		  			<h:outputText value="Remaining: #{cc.attrs.timeRemaining}" />
+		  			<h:outputText value="Favorite: " /> 
+		  		</p:outputPanel>
+		  	</p:panelGrid>
+		  </div>
+		  -->
 	</composite:implementation>
 
 </html>
