--- a/WebContent/resources/css/gamerow.css
+++ b/WebContent/resources/css/gamerow.css
@@ -1,15 +1,32 @@
 @CHARSET "UTF-8";
-.game-container {
-	text-align: center;
-	padding-left: 1.5rem;
-	padding-right: 1.5rem;
-	margin-bottom: 20px;
-	background-image: url("../img/game-frame-shadow.png");
-	background-repeat: no-repeat;
-	background-origin: content-box;
-	background-size: contain;
-	background-position: bottom;
-	white-space: nowrap;
+
+@media screen and (max-width: 39.9375em) {
+	.game-container {
+		text-align: center;
+		padding-left: 1.5rem;
+		padding-right: 1.5rem;
+		margin-bottom: 20px;
+		background-image: none;
+		background-repeat: no-repeat;
+		background-origin: content-box;
+		background-size: contain;
+		background-position: bottom;
+		white-space: nowrap;
+	}
+}
+@media screen and (min-width: 40em) {
+	.game-container {
+		text-align: center;
+		padding-left: 1.5rem;
+		padding-right: 1.5rem;
+		margin-bottom: 20px;
+		background-image: url("../img/game-frame-shadow.png");
+		background-repeat: no-repeat;
+		background-origin: content-box;
+		background-size: contain;
+		background-position: bottom;
+		white-space: nowrap;
+	}
 }
 
 /*
